--- a/app/estiloak/index.css
+++ b/app/estiloak/index.css
@@ -1,14 +1,6 @@
-/* estilos copiados de: https://codepen.io/colorlib/pen/rxddKy/ */
-
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
-
-body {
-    background: #76b852; /* fallback for old browsers */
-    background: rgb(141,194,111);
-    background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
-    font-family: "Roboto", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;      
+table{
+  margin:auto;
+  background-color: white;
 }
 
 .login-page {
