--- a/app/estiloak/general.css
+++ b/app/estiloak/general.css
@@ -2,6 +2,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+/* Orrialdearen konfigurazio orokorra */
+
 body {
     background: #76b852; /* fallback for old browsers */
     background: hsl(98, 40%, 60%);
@@ -9,4 +11,24 @@ body {
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;      
+}
+
+/* Orrialdearen botoiak */
+
+button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+button:hover, button:active, button:focus {
+  background: #43A047;
 }
