Errorea login egitean inplementatuta

--- a/app/estiloak/user_menu/liburu_zerrenda.css
+++ b/app/estiloak/user_menu/liburu_zerrenda.css
@@ -3,6 +3,11 @@ table{
     background-color: white;
 }
 
+table th{
+    font-family: Arial;
+    font-size: 20px;
+}
+
 .laukia {
     position: relative;
     z-index: 1;
