--- a/app/estiloak/index.css
+++ b/app/estiloak/index.css
@@ -26,7 +26,11 @@
   box-sizing: border-box;
   font-size: 14px;
 }
-
+.form .error_message {
+	margin: 15px 0 0;
+	color: #ff0000;
+	font-size: 12px;
+  }
 .form .message {
   margin: 15px 0 0;
   color: #b3b3b3;
