Erabiltzailea barruan dagoela identifikatu

--- a/app/estiloak/general.css
+++ b/app/estiloak/general.css
@@ -32,3 +32,22 @@ button {
 button:hover, button:active, button:focus {
   background: #43A047;
 }
+
+header{
+  background-color: white;
+  align-items: center;
+  max-width: 400px;
+  padding: 0;
+  margin: auto;
+  border-radius: 20px;
+}
+
+header img{
+  display: block;
+  margin: 0 auto;
+}
+
+header p{
+  margin: 0;
+  text-align: center;
+}
