--- a/app/estiloak/general.css
+++ b/app/estiloak/general.css
@@ -21,7 +21,7 @@ button {
   outline: 0;
   background: #4CAF50;
   width: 100%;
-  border: 0;
+  border: 2px solid;
   padding: 15px;
   color: #FFFFFF;
   font-size: 14px;
@@ -31,6 +31,33 @@ button {
 }
 button:hover, button:active, button:focus {
   background: #43A047;
+}
+button a{
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: 0;
+  width: 100%;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.home_button{
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 2px solid;
+  padding: 5px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
 }
 
 header{
