--- a/app/estiloak/general.css
+++ b/app/estiloak/general.css
@@ -23,7 +23,7 @@ button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #4caf50;
   width: 100%;
   border: 2px solid;
   padding: 15px;
@@ -85,10 +85,10 @@ header p{
 
 .h1{
   color: #FFFFFF;
-  background-color: #76b852;
+  background-color: #4caf50;
   text-align: center;
   font-size: 40px;
-  font-family: 'Times New Roman';
   text-transform: uppercase;
   position: sticky;
+  padding: 5px;
 }
